wgpuj/jnrgen/src/main/resources/wgpu.h

typedef unsigned long long WGPUOption_BufferSize;
enum WGPUIndexFormat {
  WGPUIndexFormat_Undefined = 0,
  WGPUIndexFormat_Uint16 = 1,
  WGPUIndexFormat_Uint32 = 2,
};
typedef uint32_t WGPUIndexFormat;
typedef enum WGPULogLevel {
  WGPULogLevel_Off = 0,
  WGPULogLevel_Error = 1,
  WGPULogLevel_Warn = 2,
  WGPULogLevel_Info = 3,
  WGPULogLevel_Debug = 4,
  WGPULogLevel_Trace = 5,
} WGPULogLevel;
/**
 * Status of the recieved swapchain image.
 */
typedef enum WGPUSwapChainStatus {
  WGPUSwapChainStatus_Good,
  WGPUSwapChainStatus_Suboptimal,
  WGPUSwapChainStatus_Timeout,
  WGPUSwapChainStatus_Outdated,
  WGPUSwapChainStatus_Lost,
} WGPUSwapChainStatus;
typedef struct WGPUComputePass WGPUComputePass;
typedef struct WGPURenderPass WGPURenderPass;
typedef WGPUId_CommandBuffer_Dummy WGPUCommandBufferId;
typedef WGPUCommandBufferId WGPUCommandEncoderId;
typedef struct WGPUCommandBufferDescriptor {
  WGPULabel label;
} WGPUCommandBufferDescriptor;
typedef WGPUId_Buffer_Dummy WGPUBufferId;
/**
 * Integral type used for buffer offsets.
 */
typedef uint64_t WGPUBufferAddress;
typedef struct WGPUBufferCopyView {
  WGPUTextureDataLayout layout;
  WGPUBufferId buffer;
} WGPUBufferCopyView;
typedef WGPUId_Texture_Dummy WGPUTextureId;
typedef struct WGPUTextureCopyView {
  WGPUTextureId texture;
  uint32_t mip_level;
  WGPUOrigin3d origin;
} WGPUTextureCopyView;
/**
 * Extent of a texture related operation.
 */
typedef struct WGPUExtent3d {
  uint32_t width;
  uint32_t height;
  uint32_t depth;
} WGPUExtent3d;
typedef WGPUId_TextureView_Dummy WGPUTextureViewId;
typedef struct WGPURenderPassDescriptor {
  const WGPUColorAttachmentDescriptor *color_attachments;
  uintptr_t color_attachments_length;
  const WGPUDepthStencilAttachmentDescriptor *depth_stencil_attachment;
} WGPURenderPassDescriptor;
typedef struct WGPUComputePassDescriptor {
  uint32_t todo;
} WGPUComputePassDescriptor;
typedef WGPUId_Surface WGPUSurfaceId;
/**
 * Options for requesting adapter.
 */
typedef struct WGPURequestAdapterOptions {
  /**
   * Power preference for the adapter.
   */
  WGPUPowerPreference power_preference;
  /**
   * Surface that is required to be presentable with the requested adapter. This does not
   * create the surface, only guarantees that the adapter can present to said surface.
   */
  WGPUOption_SurfaceId compatible_surface;
} WGPURequestAdapterOptions;
typedef WGPURequestAdapterOptions WGPURequestAdapterOptions;
/**
 * Represents the backends that wgpu will use.
 */
typedef uint32_t WGPUBackendBit;
typedef WGPUId_Adapter_Dummy WGPUAdapterId;
typedef void (*WGPURequestAdapterCallback)(WGPUAdapterId id, void *userdata);
typedef WGPUId_Device_Dummy WGPUDeviceId;
typedef struct WGPUDeviceDescriptor {
  WGPULabel label;
  WGPUFeatures features;
  WGPUCLimits limits;
  bool shader_validation;
  const char *trace_path;
} WGPUDeviceDescriptor;
/**
 * Describes a [`Buffer`].
 */
typedef struct WGPUBufferDescriptor {
  /**
   * Debug label of a buffer. This will show up in graphics debuggers for easy identification.
   */
  WGPULabel label;
  /**
   * Size of a buffer.
   */
  WGPUBufferAddress size;
  /**
   * Usages of a buffer. If the buffer is used in any way that isn't specified here, the operation
   * will panic.
   */
  WGPUBufferUsage usage;
  /**
   * Allows a buffer to be mapped immediately after they are made. It does not have to be [`BufferUsage::MAP_READ`] or
   * [`BufferUsage::MAP_WRITE`], all buffers are allowed to be mapped at creation.
   */
  bool mapped_at_creation;
} WGPUBufferDescriptor;
/**
 * Describes a [`Texture`].
 */
typedef struct WGPUTextureDescriptor {
  /**
   * Debug label of the texture. This will show up in graphics debuggers for easy identification.
   */
  WGPULabel label;
  /**
   * Size of the texture. For a regular 1D/2D texture, the unused sizes will be 1. For 2DArray textures, Z is the
   * number of 2D textures in that array.
   */
  WGPUExtent3d size;
  /**
   * Mip count of texture. For a texture with no extra mips, this must be 1.
   */
  uint32_t mip_level_count;
  /**
   * Sample count of texture. If this is not 1, texture must have [`BindingType::Texture::multisampled`] set to true.
   */
  uint32_t sample_count;
  /**
   * Dimensions of the texture.
   */
  WGPUTextureDimension dimension;
  /**
   * Format of the texture.
   */
  WGPUTextureFormat format;
  /**
   * Allowed usages of the texture. If used in other ways, the operation will panic.
   */
  WGPUTextureUsage usage;
} WGPUTextureDescriptor;
typedef struct WGPUTextureViewDescriptor {
  WGPULabel label;
  WGPUTextureFormat format;
  WGPUTextureViewDimension dimension;
  WGPUTextureAspect aspect;
  uint32_t base_mip_level;
  uint32_t level_count;
  uint32_t base_array_layer;
  uint32_t array_layer_count;
} WGPUTextureViewDescriptor;
typedef WGPUId_Sampler_Dummy WGPUSamplerId;
typedef struct WGPUSamplerDescriptor {
  const WGPUChainedStruct *next_in_chain;
  WGPULabel label;
  WGPUAddressMode address_mode_u;
  WGPUAddressMode address_mode_v;
  WGPUAddressMode address_mode_w;
  WGPUFilterMode mag_filter;
  WGPUFilterMode min_filter;
  WGPUFilterMode mipmap_filter;
  float lod_min_clamp;
  float lod_max_clamp;
  WGPUCompareFunction compare;
  WGPUSamplerBorderColor border_color;
} WGPUSamplerDescriptor;
typedef WGPUId_BindGroupLayout_Dummy WGPUBindGroupLayoutId;
typedef struct WGPUBindGroupLayoutDescriptor {
  WGPULabel label;
  const WGPUBindGroupLayoutEntry *entries;
  uintptr_t entries_length;
} WGPUBindGroupLayoutDescriptor;
typedef WGPUId_PipelineLayout_Dummy WGPUPipelineLayoutId;
typedef struct WGPUPipelineLayoutDescriptor {
  WGPULabel label;
  const WGPUBindGroupLayoutId *bind_group_layouts;
  uintptr_t bind_group_layouts_length;
} WGPUPipelineLayoutDescriptor;
typedef WGPUId_BindGroup_Dummy WGPUBindGroupId;
/**
 * Integral type used for buffer slice sizes.
 */
typedef WGPUNonZeroU64 WGPUBufferSize;
typedef struct WGPUBindGroupDescriptor {
  WGPULabel label;
  WGPUBindGroupLayoutId layout;
  const WGPUBindGroupEntry *entries;
  uintptr_t entries_length;
} WGPUBindGroupDescriptor;
typedef WGPUId_ShaderModule_Dummy WGPUShaderModuleId;
typedef struct WGPUShaderModuleDescriptor {
  WGPULabel label;
  const uint32_t *bytes;
  uintptr_t length;
} WGPUShaderModuleDescriptor;
/**
 * Describes a [`CommandEncoder`].
 */
typedef struct WGPUCommandEncoderDescriptor {
  /**
   * Debug label for the command encoder. This will show up in graphics debuggers for easy identification.
   */
  WGPULabel label;
} WGPUCommandEncoderDescriptor;
typedef WGPUDeviceId WGPUQueueId;
typedef WGPUId_RenderPipeline_Dummy WGPURenderPipelineId;
typedef struct WGPURenderPipelineDescriptor {
  WGPULabel label;
  WGPUOption_PipelineLayoutId layout;
  WGPUProgrammableStageDescriptor vertex_stage;
  const WGPUProgrammableStageDescriptor *fragment_stage;
  const WGPURasterizationStateDescriptor *rasterization_state;
  WGPUPrimitiveTopology primitive_topology;
  const WGPUColorStateDescriptor *color_states;
  uintptr_t color_states_length;
  const WGPUDepthStencilStateDescriptor *depth_stencil_state;
  WGPUVertexStateDescriptor vertex_state;
  uint32_t sample_count;
  uint32_t sample_mask;
  bool alpha_to_coverage;
} WGPURenderPipelineDescriptor;
typedef WGPUId_ComputePipeline_Dummy WGPUComputePipelineId;
typedef struct WGPUComputePipelineDescriptor {
  WGPULabel label;
  WGPUOption_PipelineLayoutId layout;
  WGPUProgrammableStageDescriptor compute_stage;
} WGPUComputePipelineDescriptor;
typedef WGPUId_SwapChain_Dummy WGPUSwapChainId;
/**
 * Describes a [`SwapChain`].
 */
typedef struct WGPUSwapChainDescriptor {
  /**
   * The usage of the swap chain. The only supported usage is `RENDER_ATTACHMENT`.
   */
  WGPUTextureUsage usage;
  /**
   * The texture format of the swap chain. The only formats that are guaranteed are
   * `Bgra8Unorm` and `Bgra8UnormSrgb`
   */
  WGPUTextureFormat format;
  /**
   * Width of the swap chain. Must be the same size as the surface.
   */
  uint32_t width;
  /**
   * Height of the swap chain. Must be the same size as the surface.
   */
  uint32_t height;
  /**
   * Presentation mode of the swap chain. FIFO is the only guaranteed to be supported, though
   * other formats will automatically fall back to FIFO.
   */
  WGPUPresentMode present_mode;
} WGPUSwapChainDescriptor;
typedef void (*WGPUBufferMapCallback)(WGPUBufferMapAsyncStatus status, uint8_t *userdata);
typedef void (*WGPULogCallback)(int level, const char *msg);
/**
 * Integral type used for dynamic bind group offsets.
 */
typedef uint32_t WGPUDynamicOffset;
unsigned int wgpu_get_version(void);
WGPUCommandBufferId wgpu_command_encoder_finish(WGPUCommandEncoderId encoder_id,
                                                const WGPUCommandBufferDescriptor *desc_base);
void wgpu_command_encoder_copy_buffer_to_buffer(WGPUCommandEncoderId command_encoder_id,
                                                WGPUBufferId source,
                                                WGPUBufferAddress source_offset,
                                                WGPUBufferId destination,
                                                WGPUBufferAddress destination_offset,
                                                WGPUBufferAddress size);
void wgpu_command_encoder_copy_buffer_to_texture(WGPUCommandEncoderId command_encoder_id,
                                                 const WGPUBufferCopyView *source,
                                                 const WGPUTextureCopyView *destination,
                                                 const WGPUExtent3d *copy_size);
/**
 * # Safety
 *
 * This function is unsafe because improper use may lead to memory
 * problems. For example, a double-free may occur if the function is called
 * twice on the same raw pointer.
 */
WGPURenderPass *wgpu_command_encoder_begin_render_pass(WGPUCommandEncoderId encoder_id,
                                                       const WGPURenderPassDescriptor *desc);
/**
 * # Safety
 *
 * This function is unsafe because improper use may lead to memory
 * problems. For example, a double-free may occur if the function is called
 * twice on the same raw pointer.
 */
void wgpu_render_pass_end_pass(WGPURenderPass *pass);
/**
 * # Safety
 *
 * This function is unsafe because improper use may lead to memory
 * problems. For example, a double-free may occur if the function is called
 * twice on the same raw pointer.
 */
WGPUComputePass *wgpu_command_encoder_begin_compute_pass(WGPUCommandEncoderId encoder_id,
                                                         const WGPUComputePassDescriptor *_desc);
void wgpu_compute_pass_end_pass(WGPUComputePass *pass);
WGPUSurfaceId wgpu_create_surface_from_xlib(const void **display, unsigned long window);
WGPUSurfaceId wgpu_create_surface_from_windows_hwnd(void *_hinstance, void *hwnd);
/**
 * # Safety
 *
 * This function is unsafe as it calls an unsafe extern callback.
 */
void wgpu_request_adapter_async(const WGPURequestAdapterOptions *desc,
                                WGPUBackendBit mask,
                                WGPURequestAdapterCallback callback,
                                void *userdata);
WGPUDeviceId wgpu_adapter_request_device(WGPUAdapterId adapter_id,
                                         const WGPUDeviceDescriptor *desc);
WGPUBufferId wgpu_device_create_buffer(WGPUDeviceId device_id, const WGPUBufferDescriptor *desc);
WGPUTextureId wgpu_device_create_texture(WGPUDeviceId device_id, const WGPUTextureDescriptor *desc);
WGPUTextureViewId wgpu_texture_create_view(WGPUTextureId texture_id,
                                           const WGPUTextureViewDescriptor *desc);
WGPUSamplerId wgpu_device_create_sampler(WGPUDeviceId device_id, const WGPUSamplerDescriptor *desc);
WGPUBindGroupLayoutId wgpu_device_create_bind_group_layout(WGPUDeviceId device_id,
                                                           const WGPUBindGroupLayoutDescriptor *desc);
WGPUPipelineLayoutId wgpu_device_create_pipeline_layout(WGPUDeviceId device_id,
                                                        const WGPUPipelineLayoutDescriptor *desc_base);
WGPUBindGroupId wgpu_device_create_bind_group(WGPUDeviceId device_id,
                                              const WGPUBindGroupDescriptor *desc);
WGPUShaderModuleId wgpu_device_create_shader_module(WGPUDeviceId device_id,
                                                    const WGPUShaderModuleDescriptor *source);
WGPUCommandEncoderId wgpu_device_create_command_encoder(WGPUDeviceId device_id,
                                                        const WGPUCommandEncoderDescriptor *desc);
WGPUQueueId wgpu_device_get_default_queue(WGPUDeviceId device_id);
/**
 * # Safety
 *
 * This function is unsafe as there is no guarantee that the given `data`
 * pointer is valid for `data_length` elements.
 */
void wgpu_queue_write_buffer(WGPUQueueId queue_id,
                             WGPUBufferId buffer_id,
                             WGPUBufferAddress buffer_offset,
                             const uint8_t *data,
                             uintptr_t data_length);
/**
 * # Safety
 *
 * This function is unsafe as there is no guarantee that the given `command_buffers`
 * pointer is valid for `command_buffers_length` elements.
 */
void wgpu_queue_submit(WGPUQueueId queue_id,
                       const WGPUCommandBufferId *command_buffers,
                       uintptr_t command_buffers_length);
WGPURenderPipelineId wgpu_device_create_render_pipeline(WGPUDeviceId device_id,
                                                        const WGPURenderPipelineDescriptor *desc_base);
WGPUComputePipelineId wgpu_device_create_compute_pipeline(WGPUDeviceId device_id,
                                                          const WGPUComputePipelineDescriptor *desc);
WGPUSwapChainId wgpu_device_create_swap_chain(WGPUDeviceId device_id,
                                              WGPUSurfaceId surface_id,
                                              const WGPUSwapChainDescriptor *desc);
void wgpu_device_poll(WGPUDeviceId device_id, bool force_wait);
void wgpu_buffer_map_read_async(WGPUBufferId buffer_id,
                                WGPUBufferAddress start,
                                WGPUBufferAddress size,
                                WGPUBufferMapCallback callback,
                                uint8_t *user_data);
void wgpu_buffer_unmap(WGPUBufferId buffer_id);
WGPUSwapChainStatus wgpu_swap_chain_present(WGPUSwapChainId swap_chain_id);
uint8_t *wgpu_buffer_get_mapped_range(WGPUBufferId buffer_id,
                                      WGPUBufferAddress start,
                                      WGPUBufferSize size);
void wgpu_set_log_callback(WGPULogCallback callback);
int wgpu_set_log_level(WGPULogLevel level);
/**
 * # Safety
 *
 * This function is unsafe as there is no guarantee that the given pointer is
 * valid for `offset_length` elements.
 */
void wgpu_compute_pass_set_bind_group(WGPUComputePass *pass,
                                      uint32_t index,
                                      WGPUBindGroupId bind_group_id,
                                      const WGPUDynamicOffset *offsets,
                                      uintptr_t offset_length);
void wgpu_compute_pass_set_pipeline(WGPUComputePass *pass, WGPUComputePipelineId pipeline_id);
void wgpu_compute_pass_dispatch(WGPUComputePass *pass,
                                uint32_t groups_x,
                                uint32_t groups_y,
                                uint32_t groups_z);
/**
 * # Safety
 *
 * This function is unsafe as there is no guarantee that the given pointer is
 * valid for `offset_length` elements.
 */
void wgpu_render_pass_set_bind_group(WGPURenderPass *pass,
                                     uint32_t index,
                                     WGPUBindGroupId bind_group_id,
                                     const WGPUDynamicOffset *offsets,
                                     uintptr_t offset_length);
void wgpu_render_pass_set_pipeline(WGPURenderPass *pass, WGPURenderPipelineId pipeline_id);
void wgpu_render_pass_set_index_buffer(WGPURenderPass *pass,
                                       WGPUBufferId buffer_id,
                                       WGPUIndexFormat index_format,
                                       WGPUBufferAddress offset,
                                       WGPUOption_BufferSize size);
void wgpu_render_pass_set_vertex_buffer(WGPURenderPass *pass,
                                        uint32_t slot,
                                        WGPUBufferId buffer_id,
                                        WGPUBufferAddress offset,
                                        WGPUOption_BufferSize size);
void wgpu_render_pass_draw(WGPURenderPass *pass,
                           uint32_t vertex_count,
                           uint32_t instance_count,
                           uint32_t first_vertex,
                           uint32_t first_instance);
void wgpu_render_pass_draw_indexed(WGPURenderPass *pass,
                                   uint32_t index_count,
                                   uint32_t instance_count,
                                   uint32_t first_index,
                                   int32_t base_vertex,
                                   uint32_t first_instance);